cow interface added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
     "cSpell.words": [
+        "Chattogram",
+        "Comilla",
         "errorlogger",
+        "Kankrej",
         "middlewares",
+        "Nellore",
+        "Sahiwal",
+        "Tharparkar",
         "virtuals"
     ]
 }
